<resources>
    <string name="app_name">Speedii</string>
    <string name="speedtest">SpeedTest</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="tower">Tower</string>
    <string name="settings_title">Settings</string>
    <string name="settings_language">Language</string>
    <string name="settings_dark_mode">Dark Theme</string>
    <string name="settings_mode">App Theme</string>
    <string-array name="mode_keys">
        <item>default</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string-array name="mode_options">
        <item>Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="language_keys">
        <item>default</item>
        <item>de</item>
        <item>en</item>
        <item>sl</item>
    </string-array>
    <string-array name="language_options">
        <item>Default</item>
        <item>Deutsch</item>
        <item>English</item>
        <item>Slovenščina</item>
    </string-array>
    <string name="app_logo">Speedii Logo</string>
    <string name="user">User: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="logout">Logout</string>
    <string name="my_measurements">My Measurements</string>
    <string name="my_towers">My Towers</string>
    <string name="speed">Speed: %1$s Mbps</string>
    <string name="location">Location: %1$s </string>
    <string name="provider">Provider: %1$s</string>
    <string name="date">Date: %1$s</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="no_account">Don’t have an account? Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome back!</string>
    <string name="measurement_details">Provider: %1$s\nTime: %2$s</string>
    <string name="measurement_speed">%1$.2f Mb/s</string>
    <string name="measurement">Measurement</string>
    <string name="show_result">Displaying results</string>
    <string name="back">Back</string>
    <string name="measure">Measure your speed!</string>
    <string name="measure2">Measure speed</string>
    <string name="getting_location">Getting location…</string>
    <string name="getting_provider">Getting provider…</string>
    <string name="frequency">Frequency</string>
    <string name="background_measurements">Background Measurements</string>
    <string name="simulate_measurements">Simulate Measurements</string>
    <string name="towers">Towers</string>
    <string name="measurements">Measurements</string>
    <string name="thank_you">Thank YOU for your contribution!</string>
    <string name="thank_you_success">Tower has been automatically accepted.</string>
    <string name="thank_you_failure">Tower has been automatically rejected. But worry not as it will be checked again by admins.</string>
    <string name="add_tower">Add Tower</string>
    <string name="no_network">NO NETWORK!</string>
    <string name="extreme_event">EXTREME EVENT:</string>
    <string name="provider_info">Provider: %1$s</string>
    <string name="type">Type: %1$s</string>
</resources>