<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/textExtremeEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="@string/extreme_event"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        android:gravity="center" />

    <TextView
        android:id="@+id/textNoNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/no_network"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center" />


    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textNoNetwork"
        android:layout_marginTop="32dp"
        android:text="@string/back"
        android:backgroundTint="@color/purple_500"
        android:textColor="@android:color/white" />
</RelativeLayout>
