<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TitleSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:text="@string/settings_title"
        android:textSize="@dimen/text_size_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/buttonBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids=" TitleSettings" />

    <Spinner
        android:id="@+id/spinnerMode"
        android:layout_width="269dp"
        android:layout_height="25dp"
        android:layout_marginTop="@dimen/padding_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleSettings" />

    <TextView
        android:id="@+id/textViewMode"
        android:layout_width="92dp"
        android:layout_height="22dp"
        android:layout_marginEnd="@dimen/padding_small"
        android:text="@string/settings_mode"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/spinnerMode"
        app:layout_constraintEnd_toStartOf="@+id/spinnerMode" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="267dp"
        android:layout_height="26dp"
        android:layout_marginTop="@dimen/padding_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMode" />

    <TextView
        android:id="@+id/textViewLanguage"
        android:layout_width="96dp"
        android:layout_height="23dp"
        android:layout_marginEnd="@dimen/padding_small"
        android:text="@string/settings_language"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/spinnerLanguage"
        app:layout_constraintEnd_toStartOf="@+id/spinnerLanguage" />

</androidx.constraintlayout.widget.ConstraintLayout>